name:                nhire
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Pitometsu/nhire#readme
license:             BSD3
license-file:        LICENSE
author:              Yuriy Pitomets
maintainer:          pitometsu@gmail.com
copyright:           Copyright: (c) 2017 Yuriy Pitomets
category:            Demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable nhire-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nhire
  default-language:    Haskell2010

test-suite nhire-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nhire
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Pitometsu/nhire
